scripts/platio/temp.txt
[Sun May  7 16:31:31 2017] Processing uno (platform: atmelavr, board: uno, framework: arduino)
-----------------------------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
Collected 27 compatible libraries
Looking for dependencies...
Project does not have dependencies
Compiling .pioenvs/uno/src/main.o
src/main.cpp: In function 'void loop()':
src/main.cpp:19:1: error: expected ';' before '}' token
}
^
*** [.pioenvs/uno/src/main.o] Error 1
===================================== [ERROR] Took 0.52 seconds =====================================
